--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,10 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Getting Started: Serving Web Content</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Products</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
+<main style=" margin-top: 56px;" class="container pt-5">
+
+    <div id="row" class="d-flex justify-content-between mx-auto">
+        <div class="col-3">
+            <select th:onchange="'onSortChange(this)'"; class="form-select mr-3" aria-label="Default select example">
+                <option th:selected="${sort == 'ASC'}"  value="ASC">Sort by Last Name: Ascending</option>
+                <option th:selected="${sort == 'DESC'}" value="DESC">Sort by Last Name: Descending</option>
+            </select>
+        </div>
+        <div id="search" class="col-3">
+            <form class="d-flex ml-3" role="search" th:action="@{/persons/index}" th:method="get">
+                <input th:value="${lastName}" name="lastName"  class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+
+    <hr/>
+
+    <table class="persons">
+        <tr>
+            <th>#</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Options</th>
+        </tr>
+
+        <tr th:each="person, iterator : ${persons}" th:if="${not #lists.isEmpty(persons)}">
+            <td th:text="${iterator.index + 1}" th:onclick="|studentInfo('${student.id}');|"></td>
+            <td th:text="${person.name}" th:onclick="|studentInfo('${student.id}');|"></td>
+            <td th:text="${student.lastName}" th:onclick="|studentInfo('${student.id}');|"></td>
+            <td ><i class="fas fa-trash-alt" th:onclick="|deleteStudent('${student.id}');|"></i>
+            </td>
+        </tr>
+        <tr>
+    </table>
+
+</main>
+<script>
+        function onSortChange(e) {
+            location.search = '?sort=' + e.value;
+        }
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 </html>
