--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -67,8 +67,19 @@
             <td th:text="${person.name}" th:onclick="|studentInfo('${student.id}');|"></td>
             <td></td>
             <td th:text="${student.lastName}" th:onclick="|studentInfo('${student.id}');|"></td>
-            <td >
-
+            <td class="d-flex justify-content-center">
+                <div class="container">
+                    <div class="col">
+                        <form th:action="@{/persons/edit/{id}(id=${person.id})}" th:method="get" >
+                            <button type="submit" class="btn btn-success edit-icon"><i class="fas fa-edit"></i></button>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <form th:action="@{/persons/delete/{id}(id=${person.id})}" th:method="post">
+                            <button type="submit" class="btn btn-danger delete-icon"><i class="fas fa-trash-alt"></i></button>
+                        </form>
+                    </div>
+                </div>
             </td>
         </tr>
         <tr>
@@ -79,6 +90,17 @@
         function onSortChange(e) {
             location.search = '?sort=' + e.value;
         }
+</script>
+<script>
+    $('.edit-icon').click(function(e) {
+        e.preventDefault();
+        window.location.href = $(this).attr("/orders/" + id);
+    });
+
+    $('.delete-icon').click(function(e) {
+        e.preventDefault();
+        window.location.href = $(this).attr('href');
+    });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
