--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -67,14 +67,14 @@
             <td th:text="${person.name}" th:onclick="|studentInfo('${student.id}');|"></td>
             <td></td>
             <td th:text="${student.lastName}" th:onclick="|studentInfo('${student.id}');|"></td>
-            <td class="d-flex justify-content-center">
-                <div class="container">
-                    <div class="col">
+            <td class="container">
+                <div class="row">
+                    <div class="col" style="margin-left:80px;">
                         <form th:action="@{/persons/edit/{id}(id=${person.id})}" th:method="get" >
                             <button type="submit" class="btn btn-success edit-icon"><i class="fas fa-edit"></i></button>
                         </form>
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin-right:90px;">
                         <form th:action="@{/persons/delete/{id}(id=${person.id})}" th:method="post">
                             <button type="submit" class="btn btn-danger delete-icon"><i class="fas fa-trash-alt"></i></button>
                         </form>
