--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -65,14 +65,14 @@
             <td th:text="${iterator.index + 1}" th:onclick="|studentInfo('${student.id}');|"></td>
             <td th:text="${person.name}" th:onclick="|studentInfo('${student.id}');|"></td>
             <td th:text="${student.lastName}" th:onclick="|studentInfo('${student.id}');|"></td>
-            <td class="text-center">
-                <div class="row" style="width:190px;">
-                    <div class="col ">
+            <td class="container">
+                <div class="row">
+                    <div class="col" style="margin-left:120px;">
                         <form th:action="@{/persons/edit/{id}(id=${person.id})}" th:method="get" >
                             <button type="submit" class="btn btn-success edit-icon"><i class="fas fa-edit"></i></button>
                         </form>
                     </div>
-                    <div class="col">
+                    <div class="col" style="margin-right:130px;">
                         <form th:action="@{/persons/delete/{id}(id=${person.id})}" th:method="post">
                             <button type="submit" class="btn btn-danger delete-icon"><i class="fas fa-trash-alt"></i></button>
                         </form>
