--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -49,7 +49,7 @@
     </div>
     <div class="mb-3 w-50">
       <label for="address">Address:</label>
-      <input type="text" class="form-control" id="address" name="address" required>
+      <input type="text" class="form-control" placeholder="Your address here..." id="address" name="address" required>
     </div>
     <div class="mb-3 w-50">
       <label for="quantity">Quantity:</label>
