--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -16,6 +16,9 @@
         .container .row:first-child {
             margin-top: 56px;
         }
+        .content {
+        margin-top: 60px;
+        }
     </style>
 </head>
 <body>
@@ -32,21 +35,29 @@
         </li>
       </ul>
     </div>
+
+
+
   </div>
 </nav>
 
-
+<div class="content">
 <form class="needs-validation" novalidate="" method="post" th:attr="action=@{/orders/create-or-update(id=${order.id})}"th:object="${order}">
 
   <div class="mb-3 w-50">
-    <label for="product">Select Product:</label>
-    <select class="form-control" id="product" name="product">
-      <option value="default">-</option>
-      <option value="product1">Product 1</option>
-      <option value="product2">Product 2</option>
-      <option value="product3">Product 3</option>
+    <label> Select Product:</label>
+    <select th:field="${products}">
+      <option th:each="product, iStat: ${products}" th:value="${product.name}" th:text="${product.name}">
+      </option>
     </select>
+<!--    <select class="form-control" id="product" name="product">-->
+<!--      <option value="default">-</option>-->
+<!--      <option value="product1">Product 1</option>-->
+<!--      <option value="product2">Product 2</option>-->
+<!--      <option value="product3">Product 3</option>-->
+<!--    </select>-->
   </div>
+
   <div class="mb-3 w-50">
     <label for="address">Address:</label>
     <input type="text" class="form-control" placeholder="Your address here..." id="address" name="address" required>
@@ -58,5 +69,66 @@
 
 
 </form>
+</div>
+
+
+<div>
+<tr th:each="product, iStat: ${products}">
+  <th th:text="${product.id}" scope="row"></th>
+  <td th:text="${product.name}"></td>
+  <td th:text="${product.price}">Otto</td>
+  <td>
+    <div class="row" style="width:190px;">
+      <div class="col">
+        <form th:action="@{/products/edit/{id}(id=${product.id})}" th:method="get" >
+          <button type="submit" class="btn btn-light">Add</button>
+        </form>
+      </div>
+      <div class="col">
+        <form th:action="@{/products/delete/{id}(id=${product.id})}" th:method="post" >
+          <button type="submit" class="btn btn-danger">Remove</button>
+        </form>
+      </div>
+    </div>
+
+
+  </td>
+</tr>
+</div>
+
+<!--<div class="mb-3 w-50">-->
+<!--  <label for="product">Select Product:</label>-->
+<!--  <select class="form-control" id="product" name="product">-->
+<!--    <option value="default">-</option>-->
+<!--    <option value="product1">Product 1</option>-->
+<!--    <option value="product2">Product 2</option>-->
+<!--    <option value="product3">Product 3</option>-->
+<!--  </select>-->
+<!--</div>-->
+
+
+<!--<div>-->
+<!--  <tr th:each="product, iStat: ${orderProduct}">-->
+<!--    <th th:text="${product.id}" scope="row"></th>-->
+<!--    <td th:text="${product.name}"></td>-->
+<!--    <td th:text="${product.price}">Otto</td>-->
+<!--    <td>-->
+<!--      <div class="row" style="width:190px;">-->
+<!--        <div class="col">-->
+<!--          <form th:action="@{/products/edit/{id}(id=${product.id})}" th:method="get" >-->
+<!--            <button type="submit" class="btn btn-light">Add</button>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--        <div class="col">-->
+<!--          <form th:action="@{/products/delete/{id}(id=${product.id})}" th:method="post" >-->
+<!--            <button type="submit" class="btn btn-danger">Remove</button>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
+
+
+<!--    </td>-->
+<!--  </tr>-->
+<!--</div>-->
 </body>
 </html>
