import method in order class to see quantity in html

--- a/src/main/resources/templates/order-table.html
+++ b/src/main/resources/templates/order-table.html
@@ -57,14 +57,20 @@
             <th class="col-1">#</th>
             <th class="col-3">Address</th>
             <th class="col-3">Product</th>
-            <th class="col-1">Quantity</th>
-            <th class="col-2">Options</th>
+            <th class="col-3">Quantity</th>
+            <th class="col-3">Options</th>
         </tr>
 
         <tr th:each="order, iStat: ${orders}">
             <th th:text="${order.id}" scope="row"></th>
             <td th:text="${order.address}"></td>
             <td th:text="${order.getProductIds()}"></td>
+            <td th:text="${order.getProductQuantity()}"></td>
+
+
+
+
+
 
             <!-- mborw na xrisimopoioiw to products apo to mondelo ara  na brw ta onomata   -->
 
@@ -72,6 +78,7 @@
                             <div class="row">
                                 <div class="col" style="margin-left:80px;">
                                     <form th:action="@{/orders/add-product(orderId=${order.id})}" th:method ="post" th:object="${orderProduct}" >
+                                        <label> Select Product:</label>
                                         <input type="number" placeholder="product" id="productId" name="productId" required />
                                         <input type="number" placeholder="quantity" id="quantity" name="quantity" required/>
                                         <button type="submit" class="btn btn-success edit-icon"><i class="fas fa-edit"></i></button>
