register for user

--- a/src/main/resources/templates/create-or-update-products.html
+++ b/src/main/resources/templates/create-or-update-products.html
@@ -72,6 +72,14 @@
           </div>
         </div>
 
+        <div class="col-12">
+          <label for="stock" class="form-label">Stock</label>
+          <input type="text" class="form-control" id="stock" th:field="*{stock}" placeholder="stock your item here ..." required="required">
+          <div class="invalid-feedback">
+            Please enter the stock of product.
+          </div>
+        </div>
+
       </div>
 
       <hr class="my-4">
