--- a/src/main/resources/templates/order-table.html
+++ b/src/main/resources/templates/order-table.html
@@ -12,18 +12,26 @@
     <!--    <link rel="stylesheet" href="main.css">-->
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Orders</a>
+        <a class="navbar-brand" href="#">Products Page</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="http://localhost:8080/orders/index">Orders</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="http://localhost:8080/products/index">Products</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="http://localhost:8080/products/admin">Admin</a>
+                </li>
+
             </ul>
+
         </div>
     </div>
 </nav>
