import some things to view

--- a/src/main/resources/templates/create-or-update-products.html
+++ b/src/main/resources/templates/create-or-update-products.html
@@ -77,6 +77,13 @@
             Please enter the stock of product.
           </div>
         </div>
+        <div class="col-12">
+          <label for="picture" class="form-label">Picture</label>
+          <input type="file" class="form-control" id="picture" th:field="*{picture}" placeholder="picture of your item here ..." required="required">
+          <div class="invalid-feedback">
+            Please enter the picture of product.
+          </div>
+        </div>
 
       </div>
 
