--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -75,6 +75,7 @@
             <th scope="col">Product Description</th>
             <th scope="col">Price</th>
             <th scope="col">Stoke</th>
+            <th scope="col">Picture</th>
         </tr>
 
         </thead>
@@ -86,6 +87,7 @@
             <td th:text="${product.name}"></td>
             <td th:text="${product.price}">Otto</td>
             <td th:text="${product.stock}">Otto</td>
+            <td th:text="${product.picture}">Otto</td>
 <!--            <td>-->
 <!--                <div class="row" style="width:190px;">-->
 <!--                    <div class="col">-->
@@ -145,6 +147,8 @@
         <!--        <div class="col text-center"><span>No Data</span></div>-->
 
         <!--    </div>-->
+
+    </table>
 
 </main>
 </body>
