--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -64,7 +64,7 @@
                                         <i data-feather="mail"></i>
                                         <input required="required" type="email" class="form-control" th:classappend="${emailExists} ? is-invalid"
                                                name="email" placeholder="Email address" th:value="${email}">
-                                        <div class="invalid-feedback">Email is already in use</div>
+<!--                                        <div class="invalid-feedback">Email is already in use</div>-->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -72,7 +72,7 @@
                                         <i data-feather="user"></i>
                                         <input required="required" type="text" class="form-control"
                                                placeholder="First Name" name="firstName" th:value="${firstName}">
-                                        <div class="invalid-feedback">Username is already in use</div>
+<!--                                        <div class="invalid-feedback">Username is already in use</div>-->
 
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                                         <i data-feather="user"></i>
                                         <input required="required" type="text" class="form-control"
                                                placeholder="Last Name" name="lastName" th:value="${lastName}">
-                                        <div class="invalid-feedback">Username is already in use</div>
+<!--                                        <div class="invalid-feedback">Username is already in use</div>-->
 
                                     </div>
                                 </div>
