--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -24,7 +24,7 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Products Page</a>
+    <a class="navbar-brand" href="#">Orders Page</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -56,28 +56,28 @@
     <input type="text" class="form-control" placeholder="Your address here..." id="address" name="address" required>
     <div class="col mt-3 mt-md-0">
       <div class="card">
-        <div class="card-body">
-          <h3>My Address</h3><hr>
-          <form th:action="@{/update-user-address}" method="post">
-            <div class="form-row">
-              <div class="form-group col-12">
-                <label for="billingAddress">Address</label>
-                <input type="text" class="form-control" th:name="streetAddress" th:value="${user?.address?.streetAddress}">
-              </div>
-              <div class="form-group col-6 col-sm-5">
-                <label for="billingCountry">Country</label>
-                <input type="text" class="form-control" th:name="country" th:value="${user?.address?.country}">
+<!--        <div class="card-body">-->
+<!--          <h3>My Address</h3><hr>-->
+<!--          <form th:action="@{/update-user-address}" method="post">-->
+<!--            <div class="form-row">-->
+<!--              <div class="form-group col-12">-->
+<!--                <label for="billingAddress">Address</label>-->
+<!--                <input type="text" class="form-control" th:name="streetAddress" th:value="${user?.address?.streetAddress}">-->
+<!--              </div>-->
+<!--              <div class="form-group col-6 col-sm-5">-->
+<!--                <label for="billingCountry">Country</label>-->
+<!--                <input type="text" class="form-control" th:name="country" th:value="${user?.address?.country}">-->
 
-              </div>
-              <div class="form-group col-6 col-sm-5">
-                <label for="billingCity">City</label>
-                <input type="text" class="form-control"   th:name="city" th:value="${user?.address?.city}">
-              </div>
-              <div class="form-group col-3 col-sm-2">
-                <label for="billingZip">ZIP Code</label>
-                <input type="number" class="form-control" th:name="zipCode" th:value="${user?.address?.zipCode}">
-              </div>
-            </div>
+<!--              </div>-->
+<!--              <div class="form-group col-6 col-sm-5">-->
+<!--                <label for="billingCity">City</label>-->
+<!--                <input type="text" class="form-control"   th:name="city" th:value="${user?.address?.city}">-->
+<!--              </div>-->
+<!--              <div class="form-group col-3 col-sm-2">-->
+<!--                <label for="billingZip">ZIP Code</label>-->
+<!--                <input type="number" class="form-control" th:name="zipCode" th:value="${user?.address?.zipCode}">-->
+<!--              </div>-->
+<!--            </div>-->
 
           </form>
 
